@@ -1,0 +1,2 @@
+[security]
+View=0:Authenticated
