@@ -5,7 +5,8 @@ Changelog
 1.3.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Show attendees in ical export. Added script to export the whole calendar.
+  [Julian Infanger]
 
 
 1.3.7 (2012-06-21)
